# Smart-Wallpaper

./: .gitignore  AGENST.md  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
docs/: 2026-04-17-wallpaper-switching-ux.md  macos-wallpaper-api.md
plans/: 2026-04-17-macos-wallpaper-management-design.md
src/: App.tsx  lib.rs  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/wallpaper_manager/: application.rs  backend.rs  display_watcher.rs  domain.rs  error.rs  mod.rs  store.rs
src/wallpaper_manager/bridge/: mod.rs  swift_backend.rs
