[package]
name = "smart-wallpaper"
version = "0.1.0"
description = "Tauri desktop app for smart wallpaper management"
edition = "2024"

[lib]
name = "smart_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
thiserror = "2.0.18"
